nav to links on sidebar was blocked

--- a/css/page.css
+++ b/css/page.css
@@ -2203,7 +2203,7 @@ amp-carousel .ampstart-image-with-caption {
 }
 
 .ampstart-sidebar .ampstart-sidebar-nav:after {
-  content: "";
+  content: none;
   height: 100px;
   width: 100%;
   position: absolute;
