--- a/css/page.css
+++ b/css/page.css
@@ -1,4 +1,4 @@
-/*! Bassplate | MIT License | http://github.com/basscss/bassplate */
+/*! Bassplate | MIT License | https://github.com/basscss/bassplate */
 
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -1577,11 +1577,11 @@ a:visited {
 }
 
 .amp-carousel-button-next {
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Next</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="https://www.w3.org/2000/svg"><title>Next</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>');
 }
 
 .amp-carousel-button-prev {
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Previous</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="https://www.w3.org/2000/svg"><title>Previous</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>');
 }
 
 .ampstart-dropdown {
@@ -2322,7 +2322,7 @@ h4 {
   width: 100%;
   position: absolute;
   left: 0;
-  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='104' height='39' viewBox='0 0 104 39'%3E%3Cpath fill='none' stroke='%23EFE5E3' stroke-miterlimit='10' d='M0 .5c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 5.368c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 10.236c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 15.104c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 19.972c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 24.84c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 29.708c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 34.576c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4'/%3E%3C/svg%3E")
+  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='104' height='39' viewBox='0 0 104 39'%3E%3Cpath fill='none' stroke='%23EFE5E3' stroke-miterlimit='10' d='M0 .5c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 5.368c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 10.236c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 15.104c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 19.972c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 24.84c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 29.708c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4M0 34.576c6.468 0 6.468 4 12.936 4 6.467 0 6.467-4 12.935-4 6.466 0 6.466 4 12.932 4 6.467 0 6.467-4 12.934-4 6.47 0 6.47 4 12.939 4s6.469-4 12.936-4c6.472 0 6.472 4 12.943 4 6.473 0 6.473-4 12.944-4'/%3E%3C/svg%3E")
     repeat-x 0 61px;
 }
 
@@ -2364,7 +2364,7 @@ h4 {
   left: 0;
   right: 0;
   background: transparent
-    url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='104' height='49' viewBox='0 0 104 49'%3E%3Cpath fill='none' stroke='%23EFEFEF' stroke-miterlimit='10' d='M0 .5c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 5.367c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 10.235c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 15.104c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 19.972c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 24.84c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 29.708c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 34.576c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 39.443c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 44.312c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4'/%3E%3C/svg%3E")
+    url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='104' height='49' viewBox='0 0 104 49'%3E%3Cpath fill='none' stroke='%23EFEFEF' stroke-miterlimit='10' d='M0 .5c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 5.367c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 10.235c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 15.104c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 19.972c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 24.84c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 29.708c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 34.576c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 39.443c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4M0 44.312c6.468 0 6.468 4 12.935 4 6.468 0 6.468-4 12.936-4 6.466 0 6.466 4 12.931 4 6.468 0 6.468-4 12.935-4 6.47 0 6.47 4 12.94 4 6.468 0 6.468-4 12.935-4 6.473 0 6.473 4 12.945 4 6.471 0 6.471-4 12.943-4'/%3E%3C/svg%3E")
     repeat-x 0 0 local;
 }
 
@@ -2517,7 +2517,7 @@ h4 {
   width: 10px;
   height: 13px;
   line-height: 0;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='13' viewBox='0 0 10 13'%3E%3Cpath fill='%23FFF' d='M0 13.12V0l10.47 6.561z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='10' height='13' viewBox='0 0 10 13'%3E%3Cpath fill='%23FFF' d='M0 13.12V0l10.47 6.561z'/%3E%3C/svg%3E");
   border: none;
   position: absolute;
   top: -41px;
@@ -2547,7 +2547,7 @@ h4 {
 .land-see-stories > h3:after {
   content: "";
   position: absolute;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cpath fill='none' stroke='%23021425' stroke-width='2' stroke-miterlimit='10' d='M6.967 13.932V0M0 6.966h13.932'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cpath fill='none' stroke='%23021425' stroke-width='2' stroke-miterlimit='10' d='M6.967 13.932V0M0 6.966h13.932'/%3E%3C/svg%3E");
   height: 14px;
   width: 14px;
   right: 30px;
@@ -2556,7 +2556,7 @@ h4 {
 }
 
 .land-see-stories[expanded] > h3:after {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cpath fill='none' stroke='%23021425' stroke-width='2' stroke-miterlimit='10' d='M0 6.966h13.932'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cpath fill='none' stroke='%23021425' stroke-width='2' stroke-miterlimit='10' d='M0 6.966h13.932'/%3E%3C/svg%3E");
 }
 
 .land-see-stories:before {
@@ -2718,7 +2718,7 @@ h4 {
   outline: none;
   cursor: pointer;
   background: transparent
-    url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32' overflow='visible'%3E%3Cpath fill='none' stroke='%23DFDFDF' stroke-miterlimit='10' d='M.354 31.201l15.423-15.424L.354.354'/%3E%3C/svg%3E")
+    url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32' overflow='visible'%3E%3Cpath fill='none' stroke='%23DFDFDF' stroke-miterlimit='10' d='M.354 31.201l15.423-15.424L.354.354'/%3E%3C/svg%3E")
     no-repeat 50%;
 }
 
@@ -3010,7 +3010,7 @@ h4 {
 .land-see-next-page:after,
 .land-see-prev-page:before {
   content: "";
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' height='12' width='8.118' viewBox='0 0 8.1184139 12.000001'%3E%3Cpath fill='%23808992' d='M8.118 6L.77 0 0 .624 6.585 6 0 11.376.769 12z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='https://www.w3.org/2000/svg' height='12' width='8.118' viewBox='0 0 8.1184139 12.000001'%3E%3Cpath fill='%23808992' d='M8.118 6L.77 0 0 .624 6.585 6 0 11.376.769 12z'/%3E%3C/svg%3E");
   position: absolute;
   top: 8px;
   right: -16px;
